[package]
name = "dice-game"
version = "0.1.0"
authors = ["Fluence Labs"]
publish = false
description = "A dice game example for the Fluence network"
edition = "2018"

[lib]
name = "file_hello_world"
path = "src/lib.rs"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
rand = "0.6.5"
rand_isaac = "0.1.0"
linked-hash-map = "0.5.1"
fluence = { version = "0.1.5", features = ["wasm_logger"] }
